# ta_formula

./: .gitignore  LICENSE  MANIFEST.in  README.md  autogen_pyd.py  autogen_pyi.bat  cdl_pattern_recognition.md  examples.ipynb  matype.md  perf.ipynb  pyproject.toml  requirements.txt  setup.py  test_data.py  test_strategy.pyx  tests.ipynb  tsp.py
.github/workflows/: python-publish.yml
ta_formula/: _bool_func.pxi  _indicators.c  _indicators.pxd  _indicators.pyx  _numpy_funcs.pxi  _period_indicators.pxi  _ta_lib_common.pxi  _ta_lib_func.pxi  _ta_lib_stream.pxi  _unstable_periods.pxi  calculation.py  calculation_misc.py  dataflow.py  dataflow_aio.py  dataflow_misc.py  datasource.py  exceptions.py  indicators.pxd  indicators.pyx  numpy_funcs.py  period_indicators.py  strategy.py  strategy_ast.py
tests/: conftest.py  indicators_cases.pyx  test_indicators.py
tools/: build_talib_from_source.bash  build_talib_from_source.sh  install_tools.bash
